# pyROTMOD

./: .gitignore  MANIFEST.in  Test.py  pyproject.toml  setup.py  version.py
Test/: Compare_GP.py  Finalmodel.def  Gas_Mass_Density_And_RC.txt  HERMES.cmd  HERMES.keywd  One_Step_Convergence.def  Optical_Bulge_Rotmod.txt  Optical_Disk_Rotmod.txt  Optical_Mass_Densities.txt  convertfluxtoadu.py  galfit.87  galfit.93  galfit.93~  galfit.95  galfitwork2test.py  gas_exp0.4_rotmod.txt  rotmod.c  rotmod.dc1  test_direct.yml  test_input.yml
Test/Gipsy_Rotmod/: #gas_rotmod.txt#  HERMES.keywd  OS_rotmod.txt  Optical_Bulge_Rotmod.txt  Optical_Disk_Rotmod.txt  ROTMOD.key~  disk_rotmod_sech_0.46.txt  gas_rotmod.txt  gas_rotmod_sech_0.4.txt
Test/pyROTMOD_Output/: All_RCs.txt
Test/pyROTMOD_products/: #Gas_Mass_Density_And_RC.txt#  All_RCs.txt  All_RCs_OS.txt  All_RCs_Thin.txt  Gas_Mass_Density_And_RC.txt  Log.txt  Optical_Mass_Densities.txt  Previous_Log.txt
Test/pyROTMOD_products_BURKERT/: Gas_Mass_Density_And_RC.txt  Optical_Mass_Densities.txt
Test/pyROTMOD_products_NFW/: All_RCs.txt  Optical_Mass_Densities.txt
docs/source/: conf.py  configuration.rst  index.rst  intro.rst
pyROTMOD/: __init__.py  constants.py  constants_before.py  main.py  support.py
pyROTMOD/conf/: config_defaults.py
pyROTMOD/fitters/: fitters.py
pyROTMOD/gas/: gas.py
pyROTMOD/optical/: calculate_profile_components.py  conversions.py  optical.py  profile_functions.py  profiles.py
pyROTMOD/rotmass/: HALO_FIT.ipynb  potentials.py  rotmass.py
pyROTMOD/rotmod/: rotmod.py
(+13 files in other folders)
