[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyROTMOD"
dynamic = ["version"]
description = "Development Status :: 4 - Beta"
readme = "README.md"
license = "GNU GPL v3"
requires-python = ">=3.6"
authors = [
    { name = "P. Kamphuis", email = "peterkamphuisastronomy@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy",
    "corner",
    "emcee",
    "future-fstrings",
    "galpy",
    "importlib_resources>=3.3.0",
    "lmfit",
    "matplotlib",
    "numdifftools",
    "numpy>=1.14",
    "omegaconf",
    "pandas",
    "scipy",
    "sympy",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/PeterKamphuis/pyROTMOD"

[tool.hatch.version]
path = "pyrotmod/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pyrotmod",
]
